Moved ruleset.xml to a separate repository

--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,12 @@
         "symfony/framework-bundle": "^3.0",
         "symfony/security-bundle": "^3.0",
         "twig/twig": "^1.24.1",
-        "vanio/stdlib": "^0.1-dev"
+        "vanio/stdlib": "^0.1@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.5",
-        "consistence/coding-standard": "^0.11.1",
         "matthiasnoback/symfony-dependency-injection-test": "^1.0",
-        "slevomat/coding-standard": "^1.1.1"
+        "vanio/coding-standards": "^0.1@dev"
     },
     "autoload": {
         "psr-4": {"Vanio\\WebBundle\\": ""},
@@ -30,8 +29,8 @@
     },
     "scripts": {
         "test": "\"vendor/bin/phpunit\"",
-        "lint": "\"vendor/bin/phpcs\" --standard=ruleset.xml --extensions=php --encoding=utf-8 --ignore=vendor .",
-        "fix": "\"vendor/bin/phpcbf\" --standard=ruleset.xml --extensions=php --encoding=utf-8 --no-patch --ignore=vendor ."
+        "lint": "\"vendor/bin/phpcs\" --standard=vendor/vanio/coding-standards/ruleset.xml --extensions=php --encoding=utf-8 --ignore=vendor .",
+        "fix": "\"vendor/bin/phpcbf\" --standard=vendor/vanio/coding-standards/ruleset.xml --extensions=php --encoding=utf-8 --no-patch --ignore=vendor ."
     },
     "extra": {
         "branch-alias": {
