--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/framework-bundle": "^3.0",
         "symfony/security-bundle": "^3.0",
         "twig/twig": "^1.24.1",
-        "vanio/stdlib": "^0.1@dev"
+        "vanio/stdlib": "^0.1@dev",
+        "html2text/html2text": "^4.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.5",
