--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         {"name": "Marek Štípek", "email": "marek.stipek@vanio.cz"}
     ],
     "require": {
-        "php": ">=7.0",
+        "php": "7.0.*",
         "symfony/framework-bundle": "^3.0",
         "symfony/security-bundle": "^3.0",
         "twig/twig": "^1.24.1",
