--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "7.0.*",
         "symfony/security-bundle": "^3.0",
+        "symfony/translation": "^3.0",
         "sensio/framework-extra-bundle": "^3.0",
         "twig/twig": "^1.24.1",
         "vanio/stdlib": "^0.1@dev",
