--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "7.0.*",
         "symfony/security-bundle": "^3.0",
         "symfony/translation": "^3.0",
+        "symfony/form": "^3.0",
         "sensio/framework-extra-bundle": "^3.0",
         "twig/twig": "^1.24.1",
         "vanio/stdlib": "^0.1@dev",
