--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,18 @@
         "symfony/security-bundle": "^3.0",
         "symfony/translation": "^3.0",
         "symfony/form": "^3.0",
+        "symfony/twig-bridge": "^3.0",
         "sensio/framework-extra-bundle": "^3.0",
         "twig/twig": "^1.24.1|^2.0",
-        "vanio/stdlib": "^0.1@dev",
+        "vanio/stdlib": "^0.1",
+        "vanio/type-parser": "^0.1",
         "html2text/html2text": "^4.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.5",
         "matthiasnoback/symfony-dependency-injection-test": "^1.0",
-        "vanio/coding-standards": "^0.1@dev"
+        "vanio/coding-standards": "^0.1",
+        "vanio/vanio-domain-bundle": "^0.2"
     },
     "autoload": {
         "psr-4": {"Vanio\\WebBundle\\": ""},
@@ -35,9 +38,11 @@
         "lint": "\"vendor/bin/phpcs\" --standard=ruleset.xml --extensions=php --encoding=utf-8 --ignore=vendor .",
         "fix": "\"vendor/bin/phpcbf\" --standard=ruleset.xml --extensions=php --encoding=utf-8 --no-patch --ignore=vendor ."
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "0.1.x-dev"
+            "dev-master": "0.2.x-dev"
         }
     }
 }
