--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 script:
     - php -n ~/.phpenv/versions/$(phpenv version-name)/bin/composer lint
-    - phpunit --coverage-clover build/logs/clover.xml
+    - composer test -- --coverage-clover build/logs/clover.xml
 
 after_success:
     - travis_retry php -n vendor/bin/coveralls
