--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/autosize": "^3.0.4",
     "@types/bootstrap-datepicker": "0.0.8",
     "@types/dropzone": "^4.3.34",
+    "@types/googlemaps": "^3.26.17",
     "@types/jquery": "^3.2.4",
     "@types/photoswipe": "^4.0.28",
     "autosize": "^3.0.20",
