- Added basic style of location components - Location component JS enabled by default - Added google_maps_api_key to bundle configuration - Added require_js/require_js_once/render_js Twig functions - Location component requires google maps javascript based on the configured googl maps api key

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "type": "git",
     "url": "git://github.com/vaniocz/vanio-web-bundle.git"
   },
-  "files": [],
+  "files": ["Resources/assets/styles"],
+  "main": "Resources/assets/styles/index.less",
   "dependencies": {
     "@types/autosize": "^3.0.4",
     "@types/bootstrap-datepicker": "0.0.8",
