--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.2.1",
     "jquery-photoswipe": "^1.0.3",
     "jquery-ts-components": "^0.1.4",
-    "photoswipe": "^4.1.2"
+    "photoswipe": "^4.1.2",
+    "symfony-collection": "^2.1.11"
   }
 }
