--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/translation": "^3.0",
         "symfony/form": "^3.0",
         "symfony/twig-bridge": "^3.0",
-        "sensio/framework-extra-bundle": "^3.0",
+        "sensio/framework-extra-bundle": "^3.0 || ^4.0",
         "twig/twig": "^1.24.1|^2.0",
         "vanio/stdlib": "^0.1",
         "vanio/type-parser": "^0.1",
