--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "symfony/twig-bridge": "^3.0",
         "sensio/framework-extra-bundle": "^3.0 || ^4.0 || ^5.0",
         "twig/twig": "^1.24.1 || ^2.0",
-        "vanio/stdlib": "^0.1",
+        "vanio/stdlib": "~0.1",
         "vanio/type-parser": "^0.1",
         "html2text/html2text": "^4.0.1"
     },
