--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "require": {
         "php": "^7.0",
-        "symfony/security-bundle": "^4.0",
-        "symfony/translation": "^4.0",
-        "symfony/form": "^4.0",
+        "symfony/security-bundle": "^3.0 || ^4.0",
+        "symfony/translation": "^3.0 || ^4.0",
+        "symfony/form": "^3.0 || ^4.0",
         "symfony/twig-bridge": "^4.0",
         "sensio/framework-extra-bundle": "^3.0 || ^4.0 || ^5.0",
         "twig/twig": "^1.24.1 || ^2.0",
