--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "files": ["Resources/assets/styles"],
   "main": "Resources/assets/styles/index.less",
   "dependencies": {
-    "@types/bazinga-translator": "0.0.4",
+    "@types/bazinga-translator": "^0.0.4",
     "@types/autosize": "^3.0.6",
     "@types/bootstrap-datepicker": "0.0.13",
     "@types/dropzone": "^5.0.4",
@@ -28,7 +28,7 @@
     "dropzone": "^5.5.1",
     "jquery": "^3.3.1",
     "jquery-photoswipe": "^1.0.3",
-    "jquery-ts-components": "^0.1.6",
+    "jquery-ts-components": "^0.1.7",
     "photoswipe": "^4.1.2",
     "symfony-collection": "github:maryo/symfony-collection"
   }
