--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/bootstrap-datepicker": "0.0.13",
     "@types/dropzone": "^5.0.4",
     "@types/googlemaps": "^3.30.16",
-    "@types/jquery": "^3.3.11",
+    "@types/jquery": "3.3.2",
     "@types/photoswipe": "^4.0.28",
     "autosize": "^4.0.2",
     "bazinga-translator": "^2.6.6",
