--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/dropzone": "^4.3.34",
     "@types/googlemaps": "^3.26.17",
     "@types/jquery": "^3.2.16",
+    "@types/nouislider": "^9.0.4",
     "@types/photoswipe": "^4.0.28",
     "autosize": "^3.0.20",
     "bazinga-translator": "^2.6.6",
@@ -29,6 +30,7 @@
     "jquery": "^3.2.1",
     "jquery-photoswipe": "^1.0.3",
     "jquery-ts-components": "^0.1.5",
+    "nouislider": "^11.1.0",
     "photoswipe": "^4.1.2",
     "symfony-collection": "github:maryo/symfony-collection"
   }
