--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "0.5.x-dev"
+            "dev-master": "0.5.x-dev",
+            "dev-sf3": "0.5.x-dev"
         }
     }
 }
