--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/dropzone": "^5.0.4",
     "@types/googlemaps": "^3.30.16",
     "@types/jquery": "3.3.2",
+    "@types/nouislider": "^9.0.4",
     "@types/photoswipe": "^4.0.28",
     "autosize": "^4.0.2",
     "bazinga-translator": "^2.6.6",
@@ -29,6 +30,7 @@
     "jquery": "^3.3.1",
     "jquery-photoswipe": "^1.0.3",
     "jquery-ts-components": "^0.1.7",
+    "nouislider": "^11.1.0",
     "photoswipe": "^4.1.2",
     "symfony-collection": "github:maryo/symfony-collection"
   }
