--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "sensio/framework-extra-bundle": "^3.0 || ^4.0 || ^5.0 || ^6.0",
         "twig/twig": "^1.24.1 || ^2.0 || ^3.0",
         "vanio/stdlib": "~0.1",
-        "vanio/type-parser": "^0.1",
+        "vanio/type-parser": "dev-sf5",
         "html2text/html2text": "^4.0.1"
     },
     "require-dev": {
