--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     ],
     "require": {
         "php": "^7.1",
-        "symfony/security-bundle": "^3.0 || ^4.0",
-        "symfony/translation": "^3.0 || ^4.0",
-        "symfony/form": "^3.0 || ^4.0",
-        "symfony/twig-bridge": "^3.0 || ^4.0",
-        "sensio/framework-extra-bundle": "^3.0 || ^4.0 || ^5.0",
-        "twig/twig": "^1.24.1 || ^2.0",
+        "symfony/security-bundle": "^3.0 || ^4.0 || ^5.0 || ^6.0",
+        "symfony/translation": "^3.0 || ^4.0 || ^5.0 || ^6.0",
+        "symfony/form": "^3.0 || ^4.0 || ^5.0 || ^6.0",
+        "symfony/twig-bridge": "^3.0 || ^4.0 || ^5.0 || ^6.0",
+        "sensio/framework-extra-bundle": "^3.0 || ^4.0 || ^5.0 || ^6.0",
+        "twig/twig": "^1.24.1 || ^2.0 || ^3.0",
         "vanio/stdlib": "~0.1",
         "vanio/type-parser": "^0.1",
         "html2text/html2text": "^4.0.1"
